force-app/main/default/objects/QTB_Custom_Product_Name__c/QTB_Custom_Product_Name__c.object-meta.xml
<CustomObject>
    <description>This is to store the Custom Product Name</description>
    <label>Custom Product Name</label>
    <nameField>
        <displayFormat>CPN-{000000}</displayFormat>
        <label>Custom Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Product Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>