force-app/main/default/objects/QTB_Custom_Product_Name__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.QTB_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Product Names</relationshipLabel>
    <relationshipName>Custom_Product_Names</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>