force-app/main/default/objects/QTB_Custom_Product_Name__c/fields/AccountProductId__c.field-meta.xml
<CustomField>
    <fullName>AccountProductId__c</fullName>
    <label>Billing Account Product Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>