force-app/main/default/objects/QTB_Custom_Product_Name__c/fields/Custom_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Name__c</fullName>
    <label>Custom Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>