force-app/main/default/objects/QTB_Custom_Product_Name__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Product Names</relationshipLabel>
    <relationshipName>Custom_Product_Names</relationshipName>
    <type>Lookup</type>
</CustomField>