force-app/main/default/objects/QTB_Custom_Product_Name__c/validationRules/QTB_Product_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QTB_Product_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is mandatory.</errorMessage>
</ValidationRule>